| Bug #28075 | COM_DEBUG crashes mysqld | ||
|---|---|---|---|
| Submitted: | 24 Apr 2007 14:39 | Modified: | 2 Jun 2007 13:15 |
| Reporter: | Andrey Hristov | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Stored Routines | Severity: | S1 (Critical) |
| Version: | 5.1.17+ | OS: | Any |
| Assigned to: | Andrey Hristov | CPU Architecture: | Any |
[24 Apr 2007 14:39]
Andrey Hristov
[24 Apr 2007 16:09]
Sveta Smirnova
Thank you for the report. Verified as described.
[3 May 2007 5:06]
Shane Bester
Stack range sanity check OK, backtrace follows: 0x81fbe0c handle_segfault + 796 0x4012c8db _end + 932682635 0x40106db0 _end + 932528224 0x83c6fd9 _ZN15Event_scheduler20dump_internal_statusEv + 185 0x83d50e2 _ZN6Events20dump_internal_statusEv + 162 0x82a5b4f _Z18mysql_print_statusv + 1887 0x8214ec9 _Z16dispatch_command19enum_server_commandP3THDPcj + 3129 0x8215f55 _Z10do_commandP3THD + 421 0x82031fe handle_one_connection + 206 0x4004daa7 _end + 931769687 0x4017ec2e _end + 933019358
[14 May 2007 7:57]
Axel Schwenke
duplicated as bug#28388
[21 May 2007 8:51]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/27059 ChangeSet@1.2530, 2007-05-21 10:51:11+02:00, andrey@whirlpool.mysql.com +4 -0 Fix for bug#28075 COM_DEBUG crashes mysqld Uninitialized in the constructor member variables were pointing to nirvana and causing a crash when debug information of the Event Scheduler was dumped in result to COM_DEBUG packet sent to the server.
[22 May 2007 16:18]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/27145 ChangeSet@1.2531, 2007-05-22 18:18:39+02:00, andrey@whirlpool.mysql.com +1 -0 Test case for bug#28075
[1 Jun 2007 19:22]
Bugs System
Pushed into 5.1.20-beta
[2 Jun 2007 13:15]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version, including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.20 changelog.
[20 Jun 2007 15:15]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/29196 ChangeSet@1.2524, 2007-06-20 19:14:59+04:00, kostja@bodhi.(none) +1 -0 Enable the disabled test case for Bug#28075 (pushbuild by now should be fixed).
[20 Jun 2007 19:54]
Bugs System
Pushed into 5.1.20-beta
